# smoke

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/smoke-cli/: Cargo.toml
crates/smoke-cli/src/: cli.rs  main.rs  output.rs
crates/smoke-cli/tests/: cli.rs
crates/smoke-core/: Cargo.toml
crates/smoke-core/data/: vendors.toml
crates/smoke-core/src/: coverage.rs  error.rs  executor.rs  identifier.rs  lib.rs  module.rs  registry.rs  vendors.rs
crates/smoke-core/src/backup/: manifest.rs  mod.rs
crates/smoke-core/src/config/: io.rs  mod.rs
crates/smoke-core/src/rng/: consistent.rs  lam.rs  mod.rs  pinned.rs  random.rs
crates/smoke-core/src/state/: io.rs  mod.rs
crates/smoke-modules/: Cargo.toml  build.rs
crates/smoke-modules/src/: lib.rs  machine_id.rs
crates/smoke-modules/tests/: root_machine_id.rs
crates/smoke-scan/: Cargo.toml
crates/smoke-scan/src/: lib.rs  walker.rs  yara_probe.rs
docs/: IMPLEMENTATION-PLAN.md  SPEC.md
docs/rnd/: memory-scan.md
