[package]
name = "smoke-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "smoke"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smoke-core = { path = "../smoke-core" }
toml = "0.8"
