[package]
name = "smoke-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI binary for the smoke privacy suite"
keywords = ["privacy", "fingerprinting", "anti-fingerprinting", "linux", "cli"]
categories = ["command-line-utilities", "os"]

[[bin]]
name = "smoke"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
smoke-core.workspace = true
smoke-modules.workspace = true
smoke-scan.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
