[package]
name = "smoke-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, config, state, and module trait for the smoke privacy suite"
keywords = ["privacy", "fingerprinting", "anti-fingerprinting", "linux"]
categories = ["os"]

[dependencies]
libc.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
